# GRUT-RAI

./: .replit  .zenodo.json  DIAMOND_CORE_TOE.md  design_guidelines.md  diamond_persistence.db  package-lock.json  package.json  pyproject.toml  replit.md  seed.py
attached_assets/: Pasted--GRAND-RESPONSIVE-UNIVERSE-INTEGRATOR-RAI-FINAL-BACKEND_1767219308387.txt  Pasted--GRUT-RAI-FINALIZATION-INSTRUCTION-You-are-now-a-GRUT-S_1767216179884.txt  Pasted--PART-1-GRUT-Arrays-Constants-Observational-High-z-Setu_1767224232385.txt  Pasted--PART-2-COMPUTATION-PDF-EXPORT--1767224281757_1767224281758.txt  Pasted--PART-3-Early-Universe-z-ISW-Lensing--1767224476827_1767224476828.txt  Pasted--RAI-Full-GRUT-Validation-Suite-Single-Script--17672234_1767223484302.txt  Pasted--import-necessary-libraries-import-numpy-as-np-import-m_1766994193183.txt  Pasted-1-Modular-Code-It-s-good-practice-to-isolate-configurat_1766999821845.txt  Pasted-Code-Overview-1-Importing-Libraries-Ensure-that-Streaml_1767000288931.txt  Pasted-Compute-D-z-via-Full-Kernel-Integration-In-GRUT-the-nor_1767216617489.txt  Pasted-DIAMOND-CORE-TOE-mdTheoretical-Foundation-of-the-Grand-_1767192106235.txt  Pasted-Exactly-this-is-the-key-architectural-insight-Here-s-a-_1767221837169.txt  Pasted-GRUT-RAI-CONSTITUTION-NON-NEGOTIABLE-EXECUTION-RULES-Yo_1767211089313.txt  Pasted-GRUT-RAI-NUMERICAL-AUTHORITY-DIRECTIVE-Effective-immedi_1767259413392.txt  Pasted-Here-s-a-step-by-step-strategy-to-implement-a-fully-sta_1767218733856.txt  Pasted-INSTRUCTION-IMPLEMENT-GRUT-CONSTITUTIONAL-VALIDATOR-LAY_1767211345876.txt  (+27 more)
server/: db.ts  (+10 more)
(+43 files in other folders)
